[package]
name = "app-world"
version = "0.1.6"
description = "A framework agnostic approach to managing frontend application state."
edition = "2018"
keywords = ["state", "frontend"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/percy"
documentation = "https://docs.rs/app_world"

[features]
send = []
test-utils = []

[dependencies]
