[package]
name = "app-world"
version = "0.3.0"
description = "A framework agnostic approach to managing frontend application state."
edition = "2021"
keywords = ["state", "frontend"]
license = "MIT/Apache-2.0"
repository = "https://github.com/chinedufn/app-world"
documentation = "https://docs.rs/app_world"

[features]
test-utils = []

[dependencies]
